@@ -1,5 +1,4 @@
 
 TODO:
-- retrieve custom nametag text if set when checking status
 - make compatible with "invisible" mod /vanish command & "invisibility" mod
 - add chat command help details
