@@ -3,6 +3,7 @@ next
 ----
 - added missing "textdomain" line to localization template
 - added Spanish translation
+- fixed status not retrieving custom nametag text when hidden
 
 
 v1.1
